fix overflow on scheduler event details. fixes #11445
test plan:
  * create a scheduler event that allows for multiple
    participants and enroll users in it;
  * add a long description to the event;
  * in the calendar, view the event details and verify
    that the description is 30px tall and overflows
    properly w/o pushing content outside of the detail
    popup.

Reviewed-on: https://gerrit.instructure.com/14696
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -156,7 +156,8 @@
   font-style: italic
   color: #666
 .event-detail-overflow
-  height: 177px
+  height: 30px
+  margin-bottom: 6px
   overflow-y: scroll
 
 .x-close-link
